updating user guide for v1.6
added purchase ark and passphrase language. ommitted multi send due to eluding of it changing and the average user will likely not use it.

--- a/HowtouseARKDesktopApplication_v1.4
+++ b/HowtouseARKDesktopApplication_v1.4
@@ -38,10 +38,12 @@ When you arrive on this page you will see multiple options for the ArkClient. Se
 	* [Remove wallet from ArkClient](#removewallet)
 	* [Import Account](#import)
 	* [Timestamp a File](#timestamp)
+	* [Purchase Ark Within Wallet] (#purchaseark)
 	* Different settings within Ark Client/Desktop Application
 		* [Currency](#currency)
 			* Price
 		* [Language](#lang)
+		* [Passphrase Language] (#passphraselanguage)
 	* [Add Contacts](#contacts) 	
 * **[Frequently Asked Questions](#FAQ)**
 * **[Appendix/Useful Links](#appen)**
@@ -54,6 +56,7 @@ ___
 Your Ark Wallet is a unique address that will store your Ark. 
 
 1. Open the ArkClient.
+
 2. Select "CREATE ACCOUNT".
 
 ![Imgur](https://i.imgur.com/oxNm2pc.png)
@@ -340,6 +343,29 @@ With the Ark Client you can timestamp a file on the Ark Blockchain. ArkClient wi
 
 ___
 
+#### <a name="purchaseark">Purchase Ark Within Wallet</a>
+
+With the release of the Ark Client version 1.6 users are now able to purchase Ark from within the wallet. You would want to do this if you prefer not to interact with an exhchange directly, or if you have other coins like Bitcoin, Ethereum or Litecoin you'd rather pay for your Ark with.
+The 1st in wallet purchase feature is supported by Changelly. 
+
+1. Within the Ark Wallet you will see a tab labeled "PURCHASE ARK", select it. 
+
+![Imgur](https://i.imgur.com/mPg9GYT.png)
+
+2. You will notice an interface with a header reading "Convert USD to Ark" (this changes based on your selection). Within that box there is a drop down to select your payment type. This is where you choose which payment type you'd like to use to buy your Ark. In the free form field preceeding the drop down input how much USD or other currency you would like to buy worth of Ark. When you're ready select "Exchange".
+
+![Imgur](https://i.imgur.com/XA1kgVZ.png)
+
+3. You'll notice your Ark Address is automatically propagated into the "Recipient's ARK address" field. Input your email address for trade confirmation. Verify you are not a bot and select "Proceed".
+
+4. The next screen is the payment screen. You will be prompted to send the previously entered amount to Changelly. If sending a coin you may scan the address. Ensure you send to the exact address. Once Changelly receives your payment and it is verified your Ark will be sent to your address. It's that easy!
+
+![Imgur](https://i.imgur.com/PqlULjE.png)
+
+5. You've completed purchasing Ark from within the Ark Wallet!
+
+___
+
 #### Different settings within Ark Client/Desktop Application 
 
 ##### <a name="currency">Currency</a>
@@ -381,6 +407,24 @@ ArkClient is automatically set to English as the default language. You can chang
 3. Select the dropdown and choose your language of preference. 
 
 5. Your selected language is now set as the default language and the ArkClient will reflect it. 
+
+___
+
+##### <a name="passphraselanguage">Passphrase Language</a>
+
+With the release of Ark Client version 1.6 users can now select which language they prefer to receive their passphrase in. The initially supported languages are English, French, Spanish, Italian, Japanese, Korean, Chinese (traditional and simplified).
+
+**Note:** In order to utilize this feature you must select the language prior to "Create Account". 
+
+1. From the homescreen or within your wallet the ribbon along the top of the client remains stationary. There is a gear icon for settings. Select it. 
+
+![Imgur](https://i.imgur.com/oknZKq1.png)
+
+2. A dropdown will appear and you'll see "Passhphrase Language" with a dropdown of the supported languages, select your preferred language and exit.
+
+![Imgur](https://i.imgur.com/cRzqYEb.png)
+
+3. Now when you Create Account(#creatingarkwallet) your passphrase will be presented to you in your selected language. 
 
 ___
 
